showcase/showpad/src/shared/components/table/table.component.scss
.container {
  position: relative;
}

.overlay {
  display: flex;
  align-items: center;
  justify-content: center;
  position: absolute;
  width: 100%;
  height: 100%;
  background: rgba(0,0,0, 0.5);
  z-index: 1;
}

.header {
  padding-top: 16px;
}

.hint {
  display: flex;
  align-items: center;
  font-size: 14px;
  padding: 0 12px 16px;
}

.hint-icon {
  margin-right: 8px;
}

table {
  width: 100%;
}

.mat-row .mat-cell {
  border-bottom: 1px solid transparent;
  border-top: 1px solid transparent;
  cursor: pointer;
}

.mat-row:hover .mat-cell {
  border-color: currentColor;
}

.footer {
  display: flex;
  align-items: center;
  padding: 16px;
}

.pagination {
  display: flex;
  justify-content: end;
  gap: 16px;
  flex: 1;
}

